fix solver route

--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -4,6 +4,6 @@
   include "pages/video-series.html" %} {% when "/services" %} {% include
   "pages/services.html" %} {% when "/company" %} {% include "pages/company.html"
   %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% when
-  "/repomap" %} {% include "pages/repomap.html" %} {% include "pages/solver.html" 
+  "/repomap" %} {% include "pages/repomap.html" %} {% when "/solver" %} {% include "pages/solver.html" 
   %} {% else %} {% include "pages/404.html" %} {% endmatch %}
 </div>
