--- a/templates/pages/solver.html
+++ b/templates/pages/solver.html
@@ -1,6 +1,8 @@
 <div class="mb-6">
   <h1>Issue Solver</h1>
-  <p class="text-xs opacity-75">Enter a GitHub issue and we'll try to solve it for you</p>
+  <p class="text-xs opacity-75">
+    Enter a GitHub issue and we'll try to solve it for you
+  </p>
 </div>
 
 <form
