--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,6 +10,7 @@
     <link href="/assets/fonts.css" rel="stylesheet" />
     <title>OpenAgents - {{title}}</title>
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+    <script src="https://unpkg.com/htmx-ext-ws@2.0.1/ws.js"></script>
     <script>
       document.addEventListener("htmx:afterSettle", function (evt) {
         const newTitle = evt.detail.xhr.getResponseHeader("HX-Title");
@@ -38,11 +39,18 @@
   </head>
   <body
     class="min-h-screen w-screen bg-black text-white font-mono overflow-x-hidden"
+    hx-ext="ws"
+    ws-connect="/admin/ws"
   >
     <div class="flex justify-center mx-2 md:mx-6">
       <div class="w-[60rem] max-w-full my-6 px-4 py-6 border border-white">
         {% include "header.html" %} {% include "layouts/content.html" %}
       </div>
     </div>
+
+    <!-- Hidden elements for solver status -->
+    <div id="solver-progress" class="hidden"></div>
+    <div id="solver-status" class="hidden"></div>
+    <div id="solver-result" class="hidden"></div>
   </body>
 </html>
